--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momentum App</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="greetings.js" />
   </head>
   <body>
     <form id="login-form" class="hidden">
@@ -18,6 +18,8 @@
       <button type="button">LOGIN</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock"></h2>
+    <script src="clock.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
