--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momentum App</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
     <form id="login-form" class="hidden">
@@ -19,7 +19,13 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock"></h2>
-    <script src="clock.js"></script>
-    <script src="greetings.js"></script>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <script src="js/clock.js"></script>
+    <script src="js/greetings.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
