--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <button type="button">LOGIN</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and press Enter" />
+      <button type="submit">OK</button>
+    </form>
+    <ul id="todo-list"></ul>
     <h2 id="clock"></h2>
     <div id="quote">
       <span></span>
@@ -27,5 +32,6 @@
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
